# Pico-SigGen

./: CMakeLists.txt  README.md  SSD1306.cpp  clk.pio  logo.hpp  siggen.cpp
multicore/hello_multicore/: CMakeLists.txt
multicore/multicore_fifo_irqs/: CMakeLists.txt
multicore/multicore_runner/: CMakeLists.txt
multicore/multicore_runner_queue/: CMakeLists.txt
siggen/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  siggen.cpp
siggen/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
siggen/elf2uf2/boot_uf2_headers/: Makefile
siggen/multicore/: Makefile  cmake_install.cmake
siggen/multicore/hello_multicore/: Makefile  cmake_install.cmake
siggen/multicore/multicore_fifo_irqs/: Makefile  cmake_install.cmake
siggen/multicore/multicore_runner/: Makefile  cmake_install.cmake
siggen/multicore/multicore_runner_queue/: Makefile  cmake_install.cmake
siggen/pico-sdk/: Makefile  cmake_install.cmake
siggen/pico-sdk/docs/: Makefile
siggen/pico-sdk/src/: Makefile  cmake_install.cmake
siggen/pico-sdk/src/common/: Makefile  cmake_install.cmake
siggen/pico-sdk/src/common/boot_picoboot/: Makefile
siggen/pico-sdk/src/common/boot_uf2/: Makefile
siggen/pico-sdk/src/common/pico_base/: Makefile
siggen/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
siggen/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
siggen/pico-sdk/tools/: Makefile
siggen/siggen/: Makefile  cmake_install.cmake  main.dis  main.elf  main.elf.map  main.hex  main.uf2
siggen/siggen/pico-sdk/: Makefile  cmake_install.cmake
(+61 files in other folders)
